\name{NEWS}
\alias{NEWS}
\alias{Changelog}
\title{NEWS file for the lamW package}

\section{Version 2.0.0 (2021-01-05)}{
  \subsection{Changed}{
    \itemize{
      \item Used series expansion around 0 for more accurate return value for
      \eqn{x \le 10^{-16}} (thanks to Jerry Lewis)
      \item Contracted region around \eqn{\frac{-1}{e}}{-1/e} which returns -1
      to \code{Machine$double.eps}
      \item Converted continuous integration to Github actions
    }
  }
}

\section{Version 1.3.3 (2020-06-26)}{
  \subsection{Fixed}{
    \itemize{
      \item Corrected minor issues tripping CRAN checks
      \item Adjusted linking to other packages in help documentation
    }
  }
  \subsection{Changed}{
    \itemize{
      \item Moved repository to Github
    }
  }
  \subsection{Added}{
    \itemize{
      \item Added travis, appveyor, and codecovr
      \item Added check for package version and behavior at
      \eqn{\frac{-1}{e}}{-1/e}
      \item explicit calls to \code{std::} in the C++ code
    }
  }
}

\section{Version 1.3.2 (2020-05-25)}{
  \subsection{Fixed}{
    \itemize{
      \item Corrected regression which treated PosInf and NegInf the same on
      principle branch (thanks to CRAN & Uwe Ligges)
    }
  }
  \subsection{Added}{
    \itemize{
      \item Added test to ensure PosInf and NegInf are properly identified
      accurately
      \item Expanded existing tests
    }
  }
}

\section{Version 1.3.1 (2020-05-24) [YANKED]}{
  \subsection{Added}{
    \itemize{
      \item Use R magic words and Rcpp sugar instead of calls to STD (caused
      regression)
      \item Added more tests near asymptotes and for real vs. integer
      \item Added ORCID to DESCRIPTION
    }
  }
  \subsection{Changed}{
    \itemize{
      \item Reduced max interations in some loops as convergence acheived more
      quickly
      \item Refactored old nomenclature
      \item Cleaned code for whitespace and unnecessary comments
      \item Spellcheck and minor cleanup of help file