@@ -1,8 +1,8 @@
 Package: lamW
 Type: Package
 Title: Lambert-W Function
-Version: 2.0.0
-Date: 2021-01-05
+Version: 2.1.0
+Date: 2021-05-20
 Authors@R: c(person(given="Avraham", family="Adler",role=c("aut", "cph", "cre"),
     email="Avraham.Adler@gmail.com", comment = c(ORCID = "0000-0002-3039-0703")))
 Description: Implements both real-valued branches of the Lambert-W function
@@ -18,8 +18,8 @@ NeedsCompilation: yes
 URL: https://github.com/aadler/lamW
 BugReports: https://github.com/aadler/lamW/issues
 Config/testthat/edition: 3
-Packaged: 2021-01-06 22:16:47 UTC; Parents
+Packaged: 2021-05-21 00:06:14 UTC; Parents
 Author: Avraham Adler [aut, cph, cre] (<https://orcid.org/0000-0002-3039-0703>)
 Maintainer: Avraham Adler <Avraham.Adler@gmail.com>
 Repository: CRAN
-Date/Publication: 2021-01-06 22:40:02 UTC
+Date/Publication: 2021-05-21 05:00:02 UTC
