@@ -1,21 +1,21 @@
-c6613b83dd9c531ca71ec24a0dedaa48 *DESCRIPTION
+539ca0633d2f29c04bf9728543adb5b1 *DESCRIPTION
 9fe401759a8da27089ef3979da17fa74 *LICENSE
 610b72e22e057e24ad168d21d1b2e89b *NAMESPACE
 c473cef7bbb064706393fffeff855365 *R/RcppExports.R
-9f7a3240f72d96705ce10063cd731501 *R/lamW.R
-a35411ad68cc94cfce900ca70eb5d1db *README.md
-36085f567368064c52b889c4365eef56 *build/partial.rdb
-20d9b1b10914509bb2a0ccc41faef583 *inst/CITATION
-dd0aa4174d61ab5a06f4d3b7ae1ff5fd *inst/News.Rd
+d4ad43d04eca7beb9b98433329b2a745 *R/lamW.R
+7122be380e5e3ce56cd4ac14850fef3c *README.md
+64275d8ef4f90321b8da4666d6869d6e *build/partial.rdb
+0f4dcf978f70b36a94d494b4ed2c8d5c *inst/CITATION
+b23b5f8fd8a4881a373bf1deef108e28 *inst/News.Rd
 a4124c5d0c43aea90093188d44509854 *inst/include/lamW.h
 6dbd1706b7f5f13a00ad8f9fad0dc340 *inst/include/lamW_RcppExports.h
 b438cbf7be7215630ab00a843b54c20d *man/lamW-internal.Rd
 96b1ab390f18840efc9859e6f0e871cb *man/lamW-package.Rd
-a304b9b86d7965194c01a814264ed9b6 *man/lamW.Rd
+43cd2ce3b8a9e2aef78ab7cfdce10c1b *man/lamW.Rd
 8465ee3c046dc4b929d81033152f5339 *src/Makevars
 1344f2b0991ab305a1a99893493c907d *src/Makevars.win
 266babcf68f6a3df18cca95f32427fd9 *src/RcppExports.cpp
-812146029eafdb7cb644a89af8e2077b *src/lambertW.cpp
+e0d4107fab40e44fbf14671c670f2f52 *src/lambertW.cpp
 98957ce4a115c8bff831cace88fa1557 *tests/testthat.R
 1c64f70bc2d22be5ce0a1a0ffec2faae *tests/testthat/test-lamW.R
 8f59d0742abdd6926667b4a7641a91c4 *tests/testthat/test-package.R
