@@ -17,8 +17,8 @@ significant speed.
 ## Citation
 If you use the package, please cite it as:
 
-  Avraham Adler (2015). lamW: Lambert-W Function. R package version 2.0.0.
-  https://bitbucket.org/aadler/lamw
+  Avraham Adler (2015). lamW: Lambert-W Function. R package version 2.1.0.
+  https://CRAN.R-project.org/package=lamW
 
 A BibTeX entry for LaTeX users is:
 
@@ -28,7 +28,7 @@ A BibTeX entry for LaTeX users is:
     author = {Avraham Adler},
     year = {2015},
     url = {https://CRAN.R-project.org/package=lamW},
-    note = {R package version 2.0.0.},
+    note = {R package version 2.1.0.},
   }
 ```
 
