@@ -28,12 +28,10 @@ Corless, R. M.; Gonnet, G. H.; Hare, D. E.; Jeffrey, D. J. & Knuth, D. E.
  "On the Lambert W function", Advances in Computational Mathematics,
  Springer, 1996, 5, 329-359
 
-Veberič, Darko. "Lambert W function for applications in physics."
- Computer Physics Communications 183(12), 2012, 2622-2628
-
-Veberič used for Fritsch iteration step; access to original paper currently
-unavailable. Need to retain Halley step for -7e-3 < x 7e-3 where the Fritsch may
-underflow and return NaN
+Fritsch, F. N.; Shafer, R. E. & Crowley, W. P.
+ "Solution of the transcendental equation (we^w = x)",
+ Communications of the ACM, Association for Computing Machinery (ACM),
+ 1973, 16, 123-124
 */
 
 // [[Rcpp::interfaces(r, cpp)]]
@@ -49,16 +47,16 @@ using namespace RcppParallel;
 const double EPS = 2.2204460492503131e-16;
 const double M_1_E = 1.0 / M_E;
 
-  /* Fritsch Iteration as found in http://arxiv.org/pdf/1209.0735.pdf
+  /* Fritsch Iteration
   * W_{n+1} = W_n * (1 + e_n)
-  * e_n = z_n / (1 + W_n) * (q_n - z_n) / (q_n - 2 * z_n)
   * z_n = ln(x / W_n) - W_n
   * q_n = 2 * (1 + W_n) * (1 + W_n + 2 / 3 * z_n)
+  * e_n = z_n / (1 + W_n) * (q_n - z_n) / (q_n - 2 * z_n)
   */
 
 double FritschIter(double x, double w_guess){
   double w = w_guess;
-  int MaxEval = 6;
+  int MaxEval = 5;
   bool CONVERGED = false;
   double k = 2.0 / 3.0;
   int i = 0;
@@ -66,38 +64,10 @@ double FritschIter(double x, double w_guess){
     double z = std::log(x / w) - w;
     double w1 = w + 1.0;
     double q = 2.0 * w1 * (w1 + k * z);
-    double qz = q - z;
-    double e = z / w1 * qz / (qz - z);
+    double qmz = q - z;
+    double e = z / w1 * qmz / (qmz - z);
     CONVERGED = std::abs(e) <= EPS;
     w *= (1.0 + e);
-    ++i;
-  } while (!CONVERGED && i < MaxEval);
-  return(w);
-}
-
-  /* Halley Iteration
-  Given x, we want to find W such that Wexp(W) = x, so Wexp(W) - x = 0.
-  We can use Halley iteration to find this root; to do so it needs first and
-  second derivative.
-  f(W)    = W * exp(W) - x
-  f'(W)   = W * exp(W) + exp(W)       = exp(W) * (W + 1)
-  f''(W)  = exp(W) + (W + 1) * exp(W) = exp(W) * (W + 2)
-  Halley Step:
-  W_{n+1} = W_n - {2 * f(W_n) * f'(W_n)} / {2 * [f'(W_n)]^2 - f(W_n) * f''(W_n)}
-  */
-
-double HalleyIter(double x, double w_guess){
-  double w = w_guess;
-  int MaxEval = 12;
-  bool CONVERGED = false;
-  int i = 0;
-  do {
-    double ew = std::exp(w);
-    double w1 = w + 1.0;
-    double f0 = w * ew - x;
-    f0 /= ((ew * w1) - (((w1 + 1.0) * f0) / (2.0 * w1))); // Corliss et al. 5.9
-    CONVERGED = std::abs(f0) <= EPS;
-    w -= f0;
     ++i;
   } while (!CONVERGED && i < MaxEval);
   return(w);
@@ -115,28 +85,29 @@ double lambertW0_CS(double x) {
   } else if (x <= M_E - 0.5) {
     if (std::abs(x) <= 1e-16) {
       /* This close to 0 the W_0 branch is best estimated by its Taylor/Pade
-       * expansion whose first term is the value x and remaining terms are
-       * below machine double precision. See
-       * https://math.stackexchange.com/questions/1700919/how-to-derive-the-lambert-w-function-series-expansion
-       */
+       expansion whose first term is the value x and remaining terms are below
+       machine double precision. See
+       https://math.stackexchange.com/questions/1700919/how-to-derive-the-lambert-w-function-series-expansion
+      */
       result = x;
     } else {
-      /* Use expansion in Corliss 4.22 to create (3, 2) Pade approximant
-      Numerator: -10189 / 303840 * p^3 + 40529 / 303840 * p^2 + 489 / 844 * p-1
-      Denominator: -14009 / 303840 * p^2 + 355 / 844 * p + 1
-      Converted to digits to reduce needed operations
-      */
-      double p = std::sqrt(2.0 * (M_E * x + 1.0));
-      double Numer = ((-0.03353409689310163 * p + 0.1333892838335966) * p +
-                      0.5793838862559242) * p - 1.0;
-      double Denom = (-0.04610650342285413 * p + 0.4206161137440758) * p + 1.0;
-      w = Numer / Denom;
       if (std::abs(x) <= 7e-3) {
-        /* Use Halley step near 0 as this version of Fritsch may underflow */
-        result = HalleyIter(x, w);
+        /* Use equation (5) in Fritsch */
+        w = ((1.33333333333333333 * x + 1.0) * x) /
+          ((0.83333333333333333 * x + 2.33333333333333333) * x + 1.0);
       } else {
-        result = FritschIter(x, w);
+        /* Use expansion in Corliss 4.22 to create (3, 2) Pade approximant
+        Numerator:-10189 / 303840 * p^3 + 40529 / 303840 * p^2 + 489 / 844 * p-1
+        Denominator: -14009 / 303840 * p^2 + 355 / 844 * p + 1
+        Converted to digits to reduce needed operations
+        */
+        double p = std::sqrt(2.0 * (M_E * x + 1.0));
+        double Numer = ((-0.03353409689310163 * p + 0.1333892838335966) * p +
+                        0.5793838862559242) * p - 1.0;
+        double Denom = (-0.04610650342285413 * p + 0.4206161137440758) * p + 1.0;
+        w = Numer / Denom;
       }
+      result = FritschIter(x, w);
     }
   } else {
     /* Use first five terms of Corliss et al. 4.19 */
